--- a/app/src/App.css
+++ b/app/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .webgl-canvas {
-  width: 100%;
-  max-width: 100%;
-  height: 100%;
+  width: 1920px;
+  height: 1080px;
+  border: solid 1px red;
 }
