--- a/app/src/App.css
+++ b/app/src/App.css
@@ -3,8 +3,12 @@
   text-align: center;
 }
 
+.app {
+  border: solid 1px red;
+}
+
 .webgl-canvas {
-  width: 1920px;
-  height: 1080px;
+  width: 100%;
+  height: 100%;
   /* border: solid 1px red; */
 }
