--- a/app/src/App.css
+++ b/app/src/App.css
@@ -12,4 +12,16 @@
   width: 100%;
   height: 100%;
   /* border: solid 1px red; */
+  animation: fadeInAnimation ease 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
